fixed bug when creating new song.  added overflow to song list

--- a/src/app/setlist/setlist.component.scss
+++ b/src/app/setlist/setlist.component.scss
@@ -14,16 +14,21 @@ h1 {
   vertical-align: top;
   text-align: center;
   width: 40%;
-  min-height: 60%;
+  min-height: 70vh;
   border: solid 1px #ccc;
 }
 
 .list-container.songList {
-  max-height: 75%;
-  overflow: scroll;
+  max-height: 70vh;
 }
 
-.example-list {
+.list.songList {
+  // min-height: 60vh;
+  max-height: 70vh;
+  overflow: auto;
+}
+
+.list {
   border: solid 1px #ccc;
   min-height: 60px;
   background: white;
@@ -57,11 +62,11 @@ h1 {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.example-box:last-child {
+.songCard:last-child {
   border: none;
 }
 
-.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+.list.cdk-drop-list-dragging .songCard:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
